API interface prototype is returning json for get and list actors.
